--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.5.1",
     "aws-amplify": "^1.2.2",
     "aws-amplify-react": "^2.5.2",
+    "express": "^4.17.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
